timeline fadein https://codesandbox.io/s/beautiful-wiles-k23w5\?from-embed\=\&file\=/src/styles.css:59-378

--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,21 @@ header > img {
 }
 
 /* Timeline */
+.fade-in-section {
+  opacity: 0;
+  transform: translateY(20vh);
+  visibility: hidden;
+  transition: opacity 1200ms ease-out, transform 600ms ease-out,
+    visibility 1200ms ease-out;
+  will-change: opacity, transform, visibility;
+}
+
+.fade-in-section.is-visible {
+  opacity: 1;
+  transform: none;
+  visibility: visible;
+}
+
 .timeline {
   padding: 100px 0;
   position: relative;
@@ -150,6 +165,7 @@ header > img {
 		text-decoration: none;
 	}
   
+
 /* Contact form */
 .form-field {
   margin-top: 20px;
