--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,7 @@ header > img {
 
 /* About Me */
 .profile {
+  margin-top: 50px;
   display: flex;
   justify-content: space-evenly;
   font-size: 25px;
@@ -46,6 +47,7 @@ header > img {
   width: 30%;
   height: 30%;
   border-radius: 20px;
+  margin-right: 30px;
 }
 
 /* Timeline */
@@ -165,6 +167,20 @@ header > img {
 		text-decoration: none;
 	}
   
+/* Skills */
+.skillcontainer {
+  display: flex;
+  justify-content: space-evenly;
+}
+.skillcard {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+}
+
+.skillset {
+  text-align: center;
+}
 
 /* Contact form */
 .form-field {
