--- a/src/App.css
+++ b/src/App.css
@@ -3,12 +3,12 @@
   font-family: 'Poppins', sans-serif;  margin: 0;
   padding: 0;
   box-sizing: border-box;
+  background-color: #eee;
 }
 
 .main-body {
   width: 85%;
   margin: auto;
-  background-color: #eee;
 }
 
 h3 {
@@ -23,7 +23,7 @@ ul, li {
 }
 
 li:hover {
-  background: lightsalmon;
+  border-bottom: solid 1px lightsalmon;
 }
 
 a:link, a:visited {
@@ -172,6 +172,12 @@ header > img {
 	}
   
 /* Skills */
+.back {
+  border: 1px solid gray;
+  border-radius: 3px;
+  width: 250px;
+}
+
 .skillcontainer {
   display: flex;
   justify-content: space-evenly;
