--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 * {
   font-family: 'Comfortaa', cursive;
-  font-family: 'Poppins', sans-serif;  margin: 0;
+  font-family: 'Poppins', sans-serif;  
+  margin: 0;
   padding: 0;
   box-sizing: border-box;
   background-color: #eee;
@@ -9,6 +10,7 @@
 .main-body {
   width: 85%;
   margin: auto;
+  margin-top: 50px;
 }
 
 h3 {
@@ -250,6 +252,21 @@ a:link, a:visited {
   height: auto;
 }
 
+/* Project */
+.p1, .p2, .p3 {
+  display: flex;
+  padding: 20px;
+  justify-content: space-evenly;
+  font-size: 25px;
+}
+.p1 > img, .p2 > img, .p3 >img {
+  width: 60%;
+}
+
+.p1 > p, .p2 > p, .p3 > p {
+  padding: 15px;
+}
+
 /* Contact form */
 .form-field {
   margin-top: 20px;
@@ -263,7 +280,7 @@ input {
   outline: none;
 }
 
-.project {
+.contact-project {
   border-style: hidden;
   border-bottom: solid lightsalmon;
   width: 640px;
