--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
   background-color: #eee;
 }
 
+
 .main-body {
   width: 85%;
   margin: auto;
@@ -267,6 +268,34 @@ a:link, a:visited {
   padding: 15px;
 }
 
+.each-fade {
+  display: flex;
+  width: 100%;
+}
+
+.each-fade > div {
+  width: 75%;
+}
+
+.each-fade > div img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.each-fade p {
+  width: 25%;
+  font-size: 1em;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  background:lightsalmon;
+}
+
+
+
 /* Contact form */
 .form-field {
   margin-top: 20px;
@@ -303,6 +332,8 @@ input {
   background: lightsalmon;
   color: white;
 }
+
+
 
 /* Footer */
 
