--- a/src/App.css
+++ b/src/App.css
@@ -134,7 +134,7 @@ h2 {
   height: 25px;
   right: -17px;
   background-color: white;
-  border: 4px solid #FF9F55;
+  border: 4px solid #ECA4A6;
   top: 15px;
   border-radius: 50%;
   z-index: 1;
