--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,7 @@
 
 .name {
   position: absolute;
-  top: 73%;
+  top: 55%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
@@ -48,12 +48,12 @@
 }
 
 .top-navbar {
-  padding: 20px 20px 20px 0px;
+  padding: 10px 10px 10px 0px;
 }
 
 .top-navbar > ul {
   list-style-type: none;
-  font-size: 20px;
+  font-size: 18px;
   height: 100%;
   display: flex;
   flex-direction: row;
@@ -75,16 +75,22 @@
 .profile {
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
   font-size: 20px;
   background-color: #D7DBD1;
   max-width: 100%;
   padding:20px;
+  color: #807F89;
 }
 .profile img {
   width: 30%;
   height: 30%;
   border-radius: 20px;
   margin-left: 30px;
+}
+
+.profilecontent > li {
+  font-size: 19px;
 }
 
 /* Timeline */
@@ -126,6 +132,7 @@
   position: relative;
   background-color: inherit;
   width: 50%;
+  color: #807F89;
 }
 
 .container::after {
@@ -159,7 +166,7 @@
   right: 30px;
   border: medium solid #ECA4A6;
   border-width: 10px 0 10px 10px;
-  border-color: transparent transparent transparent white;
+  border-color: transparent transparent transparent #ECA4A6;
 }  
 
 .right::before {
@@ -180,37 +187,19 @@
 }
 
 .timelinecontent {
-  padding: 20px 30px;
+  padding: 20px 10px;
   border:#ECA4A6 solid 2px;
   position: relative;
   border-radius: 6px;
 }
-
-.btn-more {
-	/* background: $primary;
-	color: $text; */
-	padding: 8px 20px;
-	text-transform: uppercase;
-	font-size: 14px;
-	margin-bottom: 20px;
-	margin-top: 10px;
-	display: inline-block;
-	border-radius: 2px;
-	box-shadow: 0 1px 3px -1px rgba(0, 0, 0, .6)}
-
-	.btn-more:hover, :active, :focus {
-		/* background: darken($primary, 10%);
-		color: $text; */
-		text-decoration: none;
-  }
   
 /* Card */
+
+
 .front, .back {
   display: flex;
   height: 220px;
   width: 220px;
-  margin: 20px;
-  border: 1px solid black;
   justify-content: center;
   align-items: center;
 }
@@ -258,19 +247,6 @@
 }
 
 /* Project */
-/* .p1, .p2, .p3 {
-  display: flex;
-  padding: 20px;
-  justify-content: space-evenly;
-  font-size: 25px;
-}
-.p1 > img, .p2 > img, .p3 >img {
-  width: 60%;
-}
-
-.p1 > p, .p2 > p, .p3 > p {
-  padding: 15px;
-} */
 
 .each-fade {
   display: flex;
@@ -286,17 +262,6 @@
   height: 100%;
   object-fit: cover;
 }
-
-/* .each-fade p {
-  width: 25%;
-  font-size: 1em;
-  display: flex;
-  text-align: center;
-  justify-content: center;
-  align-items: center;
-  margin: 0;
-  background:#ECA4A6;
-} */
 
 .slide-box {
   display: flex;
@@ -375,8 +340,52 @@ input {
 
 
 /* Media queries - Responsive timeline on screens less than 600px wide */
-/* Timeline */
+
 @media screen and (max-width: 600px) {
+  
+  .main-body {
+    width: 100%;
+    margin-top: 50px;
+  }
+
+  /* Home */
+  .name {
+    width: 300px;
+    position: absolute;
+    top: 22%;
+    left: 50%;
+    /* transform: translate(-50%, -50%); */
+  }
+  .name > h3 {
+    font-size: 12px;
+  }
+
+  .name > h1 {
+    font-size: 18px;
+  }
+
+  .homeimage > img {
+    margin-top: 20px;
+  }
+
+  /* About Me */
+  .profile {
+    margin-top: 20px
+  }
+
+  .profilecontent > h3, .timelineh4 {
+    font-size: 15px;
+  }
+
+  .profilecontent > li, .date, .location, .timeline-p {
+    font-size: 13px;
+  }
+
+  .profile > img {
+    display: none;
+  }
+
+  /* Timeline */
   /* Place the timelime to the left */
     .timeline::after {
       left: 31px;
@@ -390,6 +399,9 @@ input {
     }
   
   /* Make sure that all arrows are pointing leftwards */
+    .timeline {
+      margin-bottom: 30px;
+    }
     .container::before {
       left: 60px;
       border: medium solid white;
@@ -407,13 +419,18 @@ input {
       left: 0%;
     }
 
+    .timelinecontent {
+      padding: 10px 10px;
+      width: 200px;
+    }
+
   /* Burger menu */
+    
     .top-navbar {
       display: none;
     }
     .burgerOn {
       color: #807F89;
-      padding: 0px 20px 5px 0px;
       display: block;
       justify-content: flex-end;
       position: absolute;
@@ -431,21 +448,16 @@ input {
       display: block;
       justify-content: flex-end;
       position: absolute;
-      right: 10px;
+      right: -15px;
       background: transparent;
       transform: translateX(-50%);
       z-index: 1;
       transition: ease-in-out;
-      /* transition: width 2s, transform 1s;
-      transition-timing-function: linear;
-      transition-property: width; */
-
-      /* transition: transform .8s; */
     }
 
     .navOpen > ul {
       list-style-type: none;
-      font-size: 20px;
+      font-size: 15px;
       height: 100%;
       display: flex;
       flex-direction: column;
@@ -476,4 +488,49 @@ input {
     .navOff {
       display: none;
     }
+
+  /* Project */
+
+    .media-each-fade {
+      display: flex;
+      width: 100%;
+    }
+
+    .media-image-container {
+      width: 75%;
+    }
+
+    .media-each-fade > div img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+    .media-slide-box {
+      display: flex;
+      flex-direction: row;
+      width: 25%;
+      font-size: 1em;
+      margin: 0;
+      background:#ECA4A6;
+    }
+
+    .media-slide-box > h3 {
+      margin-top: 25px;
+      text-align: center;
+    }
+
+    .media-slide-box > p {
+      text-align: left;
+      margin-top: 25px;
+      margin-left: 10px;
+    }
+
+  /* Footer */
+    .icon{
+      display: flex;
+      margin: 0px;
+      justify-content: center;
+    }
+
   }
